# imap-gmail-tool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: gmail-imap-setup.md
docs/adrs/: 001-mcp-server-architecture.md
scripts/: fresh-start.sh  install.sh
src/: error.rs  imap.rs  main.rs  mcp.rs  smtp.rs
